Adding github workflow

--- a/.github/workflows/fourthline.yaml
+++ b/.github/workflows/fourthline.yaml
@@ -12,6 +12,7 @@ on:
 name: Fouthline Assignment
 jobs:
   terraform:
+    if: ${{ github.event.inputs.actions == 'Apply' }}
     name: 'Terraform plan & Apply'
     runs-on: ubuntu-latest
     steps:
@@ -40,5 +41,4 @@ jobs:
       if: steps.plan.outcome == 'failure'
       run: exit 1
     - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
